# pushover-watchdog

./: README.md  pyproject.toml
src/pushover_watchdog/: __init__.py  cli.py  service.py
src/pushover_watchdog/data/: watchdog.service
