[project]
name = "pushover-watchdog"
version = "0.1.0"
# description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Jung", email = "felix.jung@tu-dresden.de" }
]
requires-python = ">=3.14"
dependencies = ["psutil>=5.9", "requests>=2.31"]

[project.scripts]
watchdog = "pushover_watchdog.cli:main"
watchdog-install-service = "pushover_watchdog.service:install_service"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pushover_watchdog"]

[tool.hatch.build.targets.wheel.shared-data]
"src/pushover_watchdog/data/watchdog.service" = "pushover_watchdog/data/watchdog.service"
